--- a/pet-shelter-frontend/css/styles.css
+++ b/pet-shelter-frontend/css/styles.css
@@ -2,14 +2,17 @@
 body {
     background-color: darkgray;
     margin: 5vh;
+    
 }
 button {
     cursor: pointer;
 }
-#header, #footer {
+#app, #header, #footer {
     background-color: cornsilk;
-    margin: 0 2rem;
+    margin: auto;
+    max-width: 50vw;
 }
+
 #footer  {
     text-align: center;
 }
@@ -30,10 +33,8 @@ button {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 3rem;
+    
     text-align: center;
-    background-color: cornsilk;
-    margin: 0 2rem;
     min-height: 60vh;
 }
 #app ul {
