--- a/pet-shelter-frontend/css/styles.css
+++ b/pet-shelter-frontend/css/styles.css
@@ -1,8 +1,11 @@
 
+*{
+    font-family: Roboto, Arial, sans-serif;
+}
 body {
     background-color: darkgray;
-    margin: 5vh;
-    
+    margin: 5vh auto;
+    max-width: 50vw;
 }
 button {
     cursor: pointer;
@@ -10,10 +13,20 @@ button {
 #app, #header, #footer {
     background-color: cornsilk;
     margin: auto;
-    max-width: 50vw;
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 }
-
+#header {
+    border-top-left-radius: 2rem;
+    border-top-right-radius: 2rem;
+    padding-right: 1rem;
+}
 #footer  {
+    border-bottom-left-radius: 2rem;
+    border-bottom-right-radius: 2rem;
+    padding-top: 4rem;
+    padding-bottom: .5rem;
     text-align: center;
 }
 .nav_header {
